and keep track of all directory-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
October 30, 2014, B.Morgan                geom-usolids-V10-00-21
- Updated CMakeLists.txt to ensure library is built/installed
  in global mode.

October 29, 2014  G.Cosmo                 geom-usolids-V10-00-20
- Moved module from source/geometry/solids to source/externals.
  Adapted scripts for optional external USolids library build.
- Moved G4USolid bridge class to geometry/management.

October 10, 2014  G.Cosmo                 geom-usolids-V10-00-19
- UMultiUnion: simplified and optimised use of transformations; removed
  no longer necessary vector of pointers.

September 24, 2014  T.Nikitina
- Fixed use of kInfinity in UGenericTrap implementation.

September 22, 2014  G.Cosmo               geom-usolids-V10-00-18
- Correction to UTessellatedSolid to define post-const attribute for
  UVertexComparator::operator()(), to resolve compilation error on
  Windows/VC9 compiler. Avoid inline static methods.
  Some code formatting.

September 18, 2014  G.Cosmo               geom-usolids-V10-00-17
- Fixed typo error in USphere::SafetyFromInside() (T.Nikitina).
- Corrected compilation warnings for variables set but not used in UTrap,
  UGenericTrap and UTessellatedSolid.

September 17, 2014  G.Cosmo               geom-usolids-V10-00-16
- Added shapes from the USolids library: UExtrudedSolid, UGenericTrap,
  UTessellatedSolid (together with UQuadrangularFacet, UTriangularFacet
  and UTessellatedGeometryAlgorithms utility classes) and UTrap.
- Modified original UExtrudedSolid, UGenericTrap and UTrap classes to
  provide deferred initialisation through default constructor.
  Added public accessors to UGenericTrap and UTrap.