@@ -84,17 +84,16 @@ class UCons : public VUSolid
 
     // Other methods for solid
 
-    inline double GetCubicVolume();
-    inline double GetSurfaceArea();
+    inline double Capacity();
+    inline double SurfaceArea();
 
-
-//    inline VUSolid::EnumInside Inside( const UVector3& p ) const;
+   //    inline VUSolid::EnumInside Inside( const UVector3& p ) const;
 
     bool Normal(const UVector3& p, UVector3& n) const;
 
     double DistanceToIn(const UVector3& p, const UVector3& v, double aPstep = UUtils::kInfinity) const;
 
-    double SafetyFromOutside(const UVector3& p, bool precise) const;
+    double SafetyFromOutside(const UVector3& p, bool precise = false) const;
 
 
 
@@ -104,7 +103,7 @@ class UCons : public VUSolid
                          bool&           aConvex,
                          double aPstep = UUtils::kInfinity) const;
 
-    double SafetyFromInside(const UVector3& p, bool precise) const;
+    double SafetyFromInside(const UVector3& p, bool precise = false) const;
 
     UGeometryType GetEntityType() const;
 
@@ -157,9 +156,6 @@ class UCons : public VUSolid
   private:
 
     double fCubicVolume, fSurfaceArea;
-
-    inline double Capacity();
-    inline double SurfaceArea();
 
     inline void Initialize();
     //
